add logout function and add instagram upload status
