# src/controllers/instagramUploadController.js
@@ -2,7 +2,7 @@ const instagramUploadService = require('../services/instagramUploadService');
 
 exports.uploadInstagram = async (req, res, next) => {
     try {
-        const { instagram_users } = req.body;
+        const { instagram_users, instagram_links } = req.body;
         let instagram_images = [];
         if (req.files && req.files.instagram_image && req.files.instagram_image.length > 0) {
             instagram_images = req.files.instagram_image.map(file => file.path.replace(/\\/g, '/').split('public/').pop());
@@ -10,7 +10,7 @@ exports.uploadInstagram = async (req, res, next) => {
 
         const image_url = instagram_images.join(',');
 
-        const instagramUpload = await instagramUploadService.uploadInstagram({ image_url, instagram_users });
+        const instagramUpload = await instagramUploadService.uploadInstagram({ image_url, instagram_users, instagram_links });
         res.status(200).json({
             success: true,
             message: 'Instagram upload successful',
@@ -26,9 +26,10 @@ exports.uploadInstagram = async (req, res, next) => {
 
 exports.updateInstagram = async (req, res) => {
     try {
-        const { instagram_users } = req.body;
+        const { instagram_users, instagram_links } = req.body;
         const data = {};
         if (instagram_users) data.instagram_users = instagram_users;
+        if (instagram_links) data.instagram_links = instagram_links;
 
         if (req.files && req.files.instagram_image) {
             const instagram_images = req.files.instagram_image.map(file => file.path.replace(/\\/g, '/').split('public/').pop());
@@ -68,6 +69,22 @@ exports.getAllInstagram = async (req, res) => {
             success: true,
             message: 'Instagram fetched successfully',
             data: instagrams
+        });
+    } catch (error) {
+        res.status(500).json({
+            success: false,
+            message: error.message || 'Internal Server Error'
+        });
+    }
+}
+
+exports.getStats = async (req, res) => {
+    try {
+        const stats = await instagramUploadService.getInstagramStats();
+        res.status(200).json({
+            success: true,
+            message: 'Instagram stats fetched successfully',
+            data: stats
         });
     } catch (error) {
         res.status(500).json({
